test/types/range/unbounded/slices/sliceBoundKindNeither.good
false
sliceBoundKindNeither.chpl:5: error: halt reached - array slice out of bounds
note: slice index was .. but array bounds are 1..5
